test/fail/basic_syntax/return_without_value.lly
#[
SyntaxError: return expected type 'Integer' but got type 'Unit'.
    from return_without_value.lly:6:
]#

define f {  } define g : Integer { return f() }
